--- a/public/views/main.html
+++ b/public/views/main.html
@@ -19,7 +19,7 @@
 
         <div class="carousel-inner">
 
-          <div class="item active front" style="margin: 10px 10px;">
+          <div class="item active front" style="margin: 10px 0;">
             <img src="./assets/imgs/bigoutbackback.jpg" style="width:100%; position: absolute;">
             <div class="fronttext">
               <h1>Get great offers on 2017 forester & Outback<br>
@@ -106,8 +106,8 @@
 <div class="backtotop" id="myBtn" title="Go to top">
   <div class="textwrapper">
     <a>
-    <div class="topscroller">
-    <img class="arrowimg">
+    <div class="topscroller" onclick="topFunction()">
+    <span class="arrowimg" style="color: white"></span>
       <h3>BACK TO TOP</h3>
     </div>
     </a>
