--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -34,9 +34,9 @@ a
     z-index: 2
 
   .arrow
-  	background: url('../assets/imgs/siteimgs.PNG') no-repeat -99px -450px
-  	width: 19px
-  	height: 10px
+    background: url('../assets/imgs/siteimgs.PNG') no-repeat -99px -450px
+    width: 19px
+    height: 10px
     border: none
 
   .caronav
@@ -221,9 +221,9 @@ a
     top: 10px
 
   .sideitems a
-   text-decoration: none
-   color: inherit
-   cursor: grab
+    text-decoration: none
+    color: inherit
+    cursor: grab
 
   .side
     height: 30px
@@ -1204,13 +1204,13 @@ a
     z-index: 0
 
   .tools h1
-   height: 42px
-   width: 100%
-   position: absolute
-   font-family: Helvetica
-   color: #A2A2A2
-   font-weight: normal
-   font-size: 36px
+    height: 42px
+    width: 100%
+    position: absolute
+    font-family: Helvetica
+    color: #A2A2A2
+    font-weight: normal
+    font-size: 36px
 
   .tool
     margin: auto
@@ -1271,7 +1271,6 @@ a
   .learn
     height: 60px
     width: 250px
-    background-color:
     background-color: #0FA4DC
     color: white
     border: 2px white solid
@@ -1374,7 +1373,7 @@ a
     height: 40px
     width: 40px
     background-size: cover
-    background: url("../assets/imgs/back-to-top.png")
+    background-img: url("../assets/imgs/back-to-top.png")
     border: none
     color: white
 
@@ -1496,8 +1495,8 @@ a
     margin: 0
     padding: 0
 
-    #global_footer ul li
+  #global_footer ul li
     margin: 0px 0px 8px 0px
 
   .addedoptions
-  // border-bottom: 1px solid white
+    display: block
