--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1431,6 +1431,12 @@ a
     top: 20px
     position: absolute
 
+  .email
+    color: black
+
+  .submit
+    color: black
+
   .emailform
     height: auto
     width: 250px
@@ -1438,6 +1444,7 @@ a
     display: block
     bottom: 150px
     right: 50px
+    // color: black
 
   .orderdetails
     position: absolute
