--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1108,34 +1108,45 @@ a
     font-size: 14px
 
   .carmain
-      height: 855px
-      width: 100%
-      position: relative
-      top: 115px
-      background-color: #FAFAFA
-      background: url("../assets/imgs/brz.JPG") no-repeat center center
-      -webkit-background-size: cover
-      -moz-background-size: cover
-      background-size: cover
+    height: 855px
+    width: 100%
+    position: relative
+    top: 115px
+    background-color: #FAFAFA
+    background: url("../assets/imgs/brz.JPG") no-repeat center center
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
 
   .carmain h1
     margin: 0
 
   .item
+    height: 1000px
+    width: 100%
     margin: 0
+    position: absolute
+    border: 1px solid black
+    background-color: red
+    display: inline-block
+    position: relative
+    background-size: cover
 
-  .active
-    margin: 0
+  .owl-carousel
+    height: 1000px
+    width: 100%
+
+  .owl-theme
+    height: 100%
+    width: 100%
 
   .front
     height: 1000px
     width: 100vw
-    background: no-repeat center center
+    border: 1px solid black
     background-size: cover
-    z-index: 0
-    margin: 0
-    margin-top: 0px
-    text-align: center
+    margin: auto
+    position: relative
 
   .fronttext
     position: relative
