--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,64 +1,16 @@
 <title>Subaru Cars, Sedans, SUVs, Crossovers, Wagons | Subaru of America</title>
-<!-- <div class="front">
-  <div class="special">SEE SPECIAL OFFERS</div>
-  <div class="frontlinks">
-    <a><h1>2017 IMPREZA</h1></a>
-    <a><h1>SPECIAL OFFERS</h1></a>
-    <a><h1>AWARDS</h1></a>
-  </div>
 
-</div> -->
-<div id="frontcont" class="frontcontainer" style="width:100%;" ng-click="boxCloser()">
-<div id="myCarousel" class="carousel slide front" data-ride="carousel">
-          <ul class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="3" class="active"></li>
-          </ul>
+<div class="front">
 
-        <div class="carousel-inner">
-
-          <div class="item active front" style="margin: 10px 0;">
-            <img src="./assets/imgs/bigoutbackback.jpg" style="width:100%; position: absolute;">
-            <div class="fronttext">
-              <h1>Get great offers on 2017 forester & Outback<br>
-              Legacy, and Crosstrek models
-              </h1>
-            </div>
-          <div class="special">
-            <a><h4>SEE SPECIAL OFFERS</h4></a>
-          </div>
-          <div class="frontlinks">
-            <a><h1>2017 Forester</h1></a>
-            <a><h1>SPECIAL OFFERS</h1></a>
-            <a><h1>AWARDS</h1></a>
-          </div>
-          </div>
-          <div class="item">
-            <img src="./assets/imgs/crosstrekrain.jpg" alt="out" style="width:100%;">
-          </div>
-
-          <div class="item">
-            <img src="./assets/imgs/learnWRX.jpg" alt="wrx" style="width:100%;">
-          </div>
-
-          <div class="item">
-            <img src="./assets/imgs/water.jpg" alt="New york" style="width:100%;">
-          </div>
-
-          <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-            <span class="sr-only">Next</span>
-          </a> -->
-
+        <div class="owl-carousel owl-theme">
+          <div class="item"><h4><img src="../assets/imgs/specialoffers.jpg">1</h4></div>
+          <div class="item"><h4><img src="../assets/imgs/crosstrekrain.jpg">2</h4></div>
+          <div class="item"><h4><img src="../assets/imgs/desk.jpg">3</h4></div>
+          <!-- <div class="item"><h4>4</h4></div> -->
         </div>
+
 </div>
-</div>
+
 
 <div class="cars">
 
