--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -317,12 +317,12 @@ a
     background-color: #232323
     font-size: 10px
     font-family: helvetica arial sans-serif
-    margin: 0 0
+    margin: 0
     display: flex
     justify-content: flex-end
     flex-direction: row
     color: white
-    z-index: 2
+    z-index: 25
 
   .links
     height: 200px
@@ -1122,7 +1122,8 @@ a
     margin: 0
 
   .item
-    height: 1000px
+    top: -150px
+    height: 1070px
     width: 100%
     margin: 0
     position: absolute
@@ -1131,6 +1132,7 @@ a
     display: inline-block
     position: relative
     background-size: cover
+    z-index: 1
 
   .owl-carousel
     height: 1000px
@@ -1147,6 +1149,7 @@ a
     background-size: cover
     margin: auto
     position: relative
+    z-index: 1
 
   .fronttext
     position: relative
