--- a/public/views/main.html
+++ b/public/views/main.html
@@ -3,9 +3,9 @@
 <div class="front">
 
         <div class="owl-carousel owl-theme">
-          <div class="item"><h4><img src="../assets/imgs/specialoffers.jpg">1</h4></div>
-          <div class="item"><h4><img src="../assets/imgs/crosstrekrain.jpg">2</h4></div>
-          <div class="item"><h4><img src="../assets/imgs/desk.jpg">3</h4></div>
+          <div class="item"><img src="../assets/imgs/specialoffers.jpg"></div>
+          <div class="item"><img src="../assets/imgs/crosstrekrain.jpg"></div>
+          <div class="item"><img src="../assets/imgs/deskHD.jpg"></div>
           <!-- <div class="item"><h4>4</h4></div> -->
         </div>
 
