--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -15,6 +15,7 @@ a
 
   html
     margin: 0
+
   body
     margin: 0
     display: grid
@@ -69,7 +70,7 @@ a
     text-align: center
 
   .topitems span
-    height: 30px
+    height: 20px
     position: relative
     padding: 0 0 0 20px
     line-height: 30px
@@ -89,7 +90,9 @@ a
     width: 30px
     top: 14px
     left: 5px
-    zoom: .5
+
+  span:hover
+    border-bottom: 2px white solid
 
   .loc:before
     background: url('../assets/imgs2/navigation-sprite.png') no-repeat -2px -225px
@@ -362,7 +365,7 @@ a
     position: relative
     display: inline-block
     margin:  auto
-    border: 1px solid black
+    // border: 1px solid black
     line-height: 16px
     color: #0099FF
 
@@ -450,7 +453,7 @@ a
     display: flex
     margin: auto
     top: -100px
-    z-index: 1
+    z-index: 2
     flex-direction: row
     box-shadow: 0 18px 25px 0 rgba(0, 0, 0, 0.1)
 
@@ -1123,12 +1126,10 @@ a
 
   .item
     top: -150px
-    height: 1070px
+    height: 1170px
     width: 100%
     margin: 0
     position: absolute
-    border: 1px solid black
-    background-color: red
     display: inline-block
     position: relative
     background-size: cover
@@ -1145,11 +1146,13 @@ a
   .front
     height: 1000px
     width: 100vw
-    border: 1px solid black
     background-size: cover
     margin: auto
     position: relative
     z-index: 1
+
+  .front:active
+    cursor: crosshair
 
   .fronttext
     position: relative
@@ -1213,13 +1216,12 @@ a
     justify-content: center
     text-align: center
     padding-top: 116px
-    border: 1px black solid
-    top: -170px
-    z-index: 0
+    z-index: 1
 
   .tools h1
-    height: 42px
+    height: 50px
     width: 100%
+    margin: 29px
     position: absolute
     font-family: Helvetica
     color: #A2A2A2
@@ -1235,11 +1237,17 @@ a
     font-size: 18px
     font-family: sans-serif
     cursor: pointer
-    padding-top: 40px
+    padding-top: 150px
 
   .tool a
     text-decoration: none
     color: inherit
+    margin: 18px
+
+  .tool a:hover
+    text-decoration: none
+    color: inherit
+    margin: 18px
 
   .tool b
     margin: 18px
@@ -1258,7 +1266,6 @@ a
     align-items: center
     padding: 6.3% 8.45%
     margin-bottom: 40px
-
 
   .love
     height: 22vw
