--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1187,7 +1187,7 @@ a {
     justify-content: center;
     text-align: center;
     padding-top: 116px;
-    border: 1px black solid;
+    /*border: 1px black solid;*/
     top: -170px;
     z-index: 0; }
 
