--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -197,6 +197,12 @@ a
     background-color: none
     margin: auto 15px
 
+  @keyframes pulse
+    0%, 100%
+      background-color: white
+    50%
+      background-color: black
+
   .items h1
     position: relative
     top: 5px
