--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -33,7 +33,7 @@
       <div class="panelmenubut">Overview</div>
       <div class="panelmenubut">Photos & Videos</div>
       <div class="panelmenubut">Compare</div>
-      <div class="panelmenubut" ui-sref="cart({vehicle: '59123f08734d1d026241fb4a' })" >Build & Price</div>
+      <div class="panelmenubut" ui-sref="cart({vehicle: '59123f08734d1d026241fb4a' })" style="animation: pulse 5s infinite">Build & Price</div>
   </div>
 </div>
 
@@ -57,7 +57,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="cart({vehicle: '57abd61496a3ba641bfe93e5' })" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: '57abd61496a3ba641bfe93e5' })" style="animation: pulse 5s infinite">Build & Price</div>
 </div>
 </div>
 
@@ -84,7 +84,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="cart({vehicle: '5913fd6a734d1d099dfda7d4' })" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: '5913fd6a734d1d099dfda7d4' })" style="animation: pulse 5s infinite">Build & Price</div>
 
 
 </div>
@@ -112,7 +112,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="cart({vehicle: '59123f7e734d1d026241fb5c' })" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: '59123f7e734d1d026241fb5c' })" style="animation: pulse 5s infinite">Build & Price</div>
 
 
 </div>
@@ -140,7 +140,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="cart({vehicle: '5913fd25734d1d099dfda7c6' })" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: '5913fd25734d1d099dfda7c6' })" style="animation: pulse 5s infinite">Build & Price</div>
 
 
 </div>
@@ -168,7 +168,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="cart({vehicle: '591240a6734d1d026241fbbf' })" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: '591240a6734d1d026241fbbf' })" style="animation: pulse 5s infinite">Build & Price</div>
 
 
 </div>
@@ -197,7 +197,7 @@
     <div class="panelmenubut">Overview</div>
     <div class="panelmenubut">Photos & Videos</div>
     <div class="panelmenubut">Compare</div>
-    <div class="panelmenubut" ui-sref="cart({vehicle: '5913fcd0734d1d099dfda7a3' })" >Build & Price</div>
+    <div class="panelmenubut" ui-sref="cart({vehicle: '5913fcd0734d1d099dfda7a3' })" style="animation: pulse 5s infinite">Build & Price</div>
 
 
 </div>
