--- a/public/views/shopping.html
+++ b/public/views/shopping.html
@@ -1,6 +1,6 @@
 <div class="shoppingcon">
-
-<div id="research" class="shopping">
+<h1><strong><b>COMMING SOON</b></strong></h1>
+<!-- <div id="research" class="shopping">
   <h3>RESEARCH</h3>
     <ul>Buil & Price</ul>
     <ul>Compare Vehicles</ul>
@@ -33,6 +33,6 @@
   (801)492-0100</h4>
 
   <h2>GET A LOCAL PRICE</h2>
-</div>
+</div> -->
 
 </div>
