--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -36,7 +36,8 @@ a
 
   .arrow
     background: url('../assets/imgs/siteimgs.PNG') no-repeat -99px -450px
-    width: 19px
+    margin: 0
+    width: 18px
     height: 10px
     border: none
 
@@ -192,6 +193,7 @@ a
 
   .items
     height: 58px
+    width: auto
     display: inline-block
     text-align: center
     background-color: none
@@ -1399,9 +1401,11 @@ a
   .arrowimg
     height: 40px
     width: 40px
+    margin: auto
     background-size: cover
-    background-img: url("../assets/imgs/back-to-top.png")
-    border: none
+    background-color: black
+    background: url("../assets/imgs/back-to-top.png")
+    border: black
     color: white
 
   .arrowimg:hover
