--- a/public/views/main.html
+++ b/public/views/main.html
@@ -63,12 +63,12 @@
 
 <div class="backtotop" id="myBtn" title="Go to top">
   <div class="textwrapper">
-    <a>
+    <!-- <a> -->
     <div class="topscroller" onclick="topFunction()">
-    <span class="arrowimg" style="color: white"></span>
+    <div class="arrowimg" style="color: white"></div>
       <h3>BACK TO TOP</h3>
     </div>
-    </a>
+    <!-- </a> -->
   </div>
 </div>
 
