--- a/public/views/shopping.html
+++ b/public/views/shopping.html
@@ -1,5 +1,5 @@
 <div class="shoppingcon">
-<h1><strong><b>COMMING SOON</b></strong></h1>
+<h1 style="height: 15px; width: 300px; margin: auto;"><strong><b>COMMING SOON</b></strong></h1>
 <!-- <div id="research" class="shopping">
   <h3>RESEARCH</h3>
     <ul>Buil & Price</ul>
