--- a/public/views/vehicles.html
+++ b/public/views/vehicles.html
@@ -1,6 +1,8 @@
-<body> <img class="vimg">
-<div id="carheader" class="carheader">
+<body>
+<h1 style="height: 25px; width: 350px; color: #0073B1; top: 300px; margin: auto; position: relative; ">COMMING SOON!</h1>
 
+<!-- <div id="carheader" class="carheader">
+<img class="vimg">
 <h4>{{vehicle.year}} {{vehicle.model}}</h4>
 <h4>{{vehicle.price}} starting MSRP</h4>
 <h4>{{vehicle.hmpg}}/{{vehicle.cmpg}}** MPG Up to</h4>
@@ -11,7 +13,7 @@
   <div class="caritem">Features</div>
   <div class="caritem">Accolades</div>
   <div class="caritem">models</div>
-  <!-- <div id="shopcar"><h4>Shop {{vehicle.model}}</h4></div> -->
+
 </div>
 <div id="shopcar"><h4>Shop {{vehicle.model}}</h4></div>
 
@@ -29,5 +31,5 @@
       <ul>{{vehicle.feature4}}</ul>
     </ul>
   </h1>
-</div>
+</div> -->
 </body>
