--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -31,8 +31,10 @@
     <div class="visual">
       <h1>COLORS</h1>
     <h3>EXTERIOR</h3>
-    <h4 class="colorname">{{color.name}}</h4>
-    <div class="color" ng-repeat="color in colors" ng-click="chooseColor( color ); chosencolor()" style="background-color: {{color.colorid}}"></div>
+    <h4 class="colorname" ng-init="WorldRally = true">
+      {{color}}
+    </h4>
+    <div class="color" ng-repeat="color in colorlist" ng-click="chooseColor( color ); chosencolor()" style="background-color: {{color.colorid}}"></div>
 
     <h3>INTERIOR</h3>
     <h4>Warm Ivory Leather</h4>
