--- a/public/views/cardropdown.html
+++ b/public/views/cardropdown.html
@@ -209,10 +209,11 @@
 <div class="vehiclelist" ui-sref="all"><h4>Future Vehicles and Concepts</h4></div>
 </div>
 <script>
-function boxCloser(e){
-  if(e.target.id != '#vehicledropdown'){
-     document.body.removeEventListener('click', boxCloser, false);
-     $('#vehicledropdown').hide();
-  }
-}
+// function boxCloser(e){
+//   if(e.target.id != '#vehicledropdown'){
+//      document.body.removeEventListener('click', boxCloser, false);
+//      $('#vehicledropdown').hide();
+//   }
+// }
+
 </script>
