--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1154,10 +1154,11 @@ a
   .front
     height: 1000px
     width: 100vw
-    background-size: cover
     margin: auto
     position: relative
     z-index: 1
+    background: url("../../assets/imgs/crosstrekrain.jpg")
+    background-size: cover
 
   .front:active
     cursor: crosshair
@@ -1175,6 +1176,23 @@ a
     font-size: 16px
     font-family: sans-serif
     display: flex
+
+  #crossrain
+    z-index: 0
+    width: 100%
+    background-size: cover
+
+  .trektext
+    position: absolute
+    top: 300px
+    left: 300px
+    text-align: left
+    color: white
+
+  .trektext h1
+    font-size: 36px
+    font-weight: bold
+    font-family: sans-serif
 
   .special
     height: 60px
