--- a/public/views/main.html
+++ b/public/views/main.html
@@ -2,18 +2,22 @@
 
 <div class="front">
 
-        <div class="owl-carousel owl-theme">
+        <!-- <div class="owl-carousel owl-theme">
           <div class="item">
             <img src="../assets/imgs/specialofferscross.jpg">
+          </div> -->
+          <div id="crossrain" class="item">
+            <div class="trektext">
+            <h1>2019 Subaru Crosstrek<br>
+            Highest Possible Safety Rating</h1>
+            </div>
+            <!-- <img style="width: 100%" src="../assets/imgs/crosstrekrain.jpg"> -->
           </div>
-          <div class="item">
-            <img src="../assets/imgs/crosstrekrain.jpg">
-          </div>
-          <div class="item">
+          <!-- <div class="item">
             <img src="../assets/imgs/deskHD.jpg">
           </div>
 
-        </div>
+        </div>  -->
 
 </div>
 
