--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,8 +8,9 @@
           </div> -->
           <div id="crossrain" class="item">
             <div class="trektext">
-            <h1>2019 Subaru Crosstrek<br>
-            Highest Possible Safety Rating</h1>
+              <h1>Get a great vehicle and support a great cause.</h1>
+            <h2>Get 0% APR Financing for 63 months on all new 2018 Subaru Forester and Outback models<br>
+            Now through January 2, 2018</h2>
             </div>
             <!-- <img style="width: 100%" src="../assets/imgs/crosstrekrain.jpg"> -->
           </div>
