--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -343,7 +343,8 @@ a
   .vehicledropdown
     transition: 600ms ease-out
     position: relative
-    display: inline-block
+    display: table
+    visibility: hidden
     top: 15px
     right: 200px
     width: 956px
@@ -1157,7 +1158,7 @@ a
     margin: auto
     position: relative
     z-index: 1
-    background: url("../../assets/imgs/crosstrekrain.jpg")
+    background: url("../../assets/imgs/sharethelove.jpg")
     background-size: cover
 
   .front:active
@@ -1183,14 +1184,14 @@ a
     background-size: cover
 
   .trektext
-    position: absolute
-    top: 300px
-    left: 300px
-    text-align: left
+    position: relative
+    top: 250px
+    margin: auto
     color: white
 
   .trektext h1
-    font-size: 36px
+    font-size: 40px
+    letter-spacing: 1
     font-weight: bold
     font-family: sans-serif
 
