--- a/public/views/main.html
+++ b/public/views/main.html
@@ -12,13 +12,14 @@
             <h2>Get 0% APR Financing for 63 months on all new 2018 Subaru Forester and Outback models<br>
             Now through January 2, 2018</h2>
             </div>
+            <div class="welcome">
+                <h2>Welcome to Sergio's<br>Subaru.com clone</h2>
+                <h2>See what else he's done<br>
+                  <a href="https://sbrycebarker.github.io/portfolio/#!/">here</a>
+                </h2>
+            </div>
             <!-- <img style="width: 100%" src="../assets/imgs/crosstrekrain.jpg"> -->
           </div>
-          <!-- <div class="item">
-            <img src="../assets/imgs/deskHD.jpg">
-          </div>
-
-        </div>  -->
 
 </div>
 
