--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -13,9 +13,7 @@
 <div class="vehiclecardscon">
 <div class="modelcon" ng-repeat="car in cars">
   <div class="modeldetcon">
-  <div class="modelimg" style="background: url({{car.buildimg2}})no-repeat center; -webkit-background-size: cover;
-      -moz-background-size: cover;
-      background-size: cover">
+  <div class="modelimg" style="background: url({{car.buildimg2}})no-repeat center; -webkit-background-size: cover; -moz-background-size: cover; background-size: cover">
     <!-- <img src="{{car.buildimg2}}"> -->
     <div class="views">
     <div class="viewselect">EXTERIOR</div>
